adding all changes